first angular app

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<!--  Lecture One Start -->
+<!-- <!DOCTYPE html>
+<html lang="en" ng-app="myFirstApp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Coursera</title>
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
+    <title>My First angular App</title>
 </head>
 <body>
-    <h1>Hello Coursera Students! I am thrilled about this course.</h1>
+    <h1>My First Angular App</h1>
+    <div ng-controller="MyFirstController">
+    {{ name }}
+    <br/>
+    {{ sayHello()}}
+    <input type="text" ng-model = "name"/>
+    </div>
 </body>
-</html>
+</html> -->
+
+
+<!--  Lecture One End -->
